// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuntimeConfig matches snapshot 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-dark">
  <!--v-if-->
  <!--v-if-->
  <ipl-select-stub modelvalue="SPLATOON_2" label="Game version" options="[object Object],[object Object]" disabled="false" data-test="game-version-select"></ipl-select-stub>
  <ipl-select-stub label="Language" options="[object Object],[object Object],[object Object],[object Object]" disabled="false" data-test="locale-select" class="m-t-6"></ipl-select-stub>
  <ipl-select-stub label="Interface Language" options="[object Object],[object Object]" disabled="false" data-test="interface-locale-select" class="m-t-6"></ipl-select-stub>
  <ipl-button-stub label="Update" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" errormessage="Error!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" class="m-t-8" title="Right-click to undo changes." data-test="update-button"></ipl-button-stub>
</div>"
`;

exports[`RuntimeConfig matches snapshot when changing data 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-dark">
  <!--v-if-->
  <div data-v-c35f7b2a="" class="ipl-message__wrapper ipl-message__type-warning m-b-8" data-test="version-change-warning"><svg data-v-c35f7b2a="" class="svg-inline--fa fa-triangle-exclamation icon" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="triangle-exclamation" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
      <path class="" fill="currentColor" d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"></path>
    </svg>
    <div data-v-c35f7b2a="" class="message-content">
      <!----> Changing game versions will reset round and match data!
    </div>
  </div>
  <ipl-select-stub modelvalue="SPLATOON_3" label="Game version" options="[object Object],[object Object]" disabled="false" data-test="game-version-select"></ipl-select-stub>
  <ipl-select-stub label="Language" options="[object Object],[object Object],[object Object],[object Object]" disabled="false" data-test="locale-select" class="m-t-6"></ipl-select-stub>
  <ipl-select-stub label="Interface Language" options="[object Object],[object Object]" disabled="false" data-test="interface-locale-select" class="m-t-6"></ipl-select-stub>
  <ipl-button-stub label="Update" color="red" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" errormessage="Error!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" class="m-t-8" title="Right-click to undo changes." data-test="update-button"></ipl-button-stub>
</div>"
`;
